--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,20 @@ charset-normalizer==3.1.0
 Django==3.2.18
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
-gunicorn==20.1.0
+Faker==18.3.1
 idna==3.4
 importlib-metadata==6.0.0
+Markdown==3.4.1
 Pillow==9.4.0
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
-python-dotenv==1.0.0
+python-dateutil==2.8.2
+python-dotenv==0.21.1
 pytz==2022.7.1
 requests==2.28.2
+six==1.16.0
 sqlparse==0.4.3
 twilio==7.16.4
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 urllib3==1.26.14
 zipp==3.15.0
